when modal open background shift to left issue fix

--- a/src/main/content/_assets/css/start.scss
+++ b/src/main/content/_assets/css/start.scss
@@ -727,6 +727,9 @@ html, body {
     }
 }
 
+.modal-open { // class belongs to bootstrap css, seems like in few bootstrap versions when modal popup open it shifts the background to left since it add style dynamically
+    padding-right:0 !important;
+}
 
 @media (max-width: 991.98px) {
 
